unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/simplesms__SimpleSMSConfig2__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores custom setting info for the Blackthorn Messaging application.</description>
    <label>Blackthorn Messaging Settings</label>
</CustomObject>