unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>simplesms__AccountNumber__c</fullName>
    <description>Your organization&#39;s Simple SMS account number.</description>
    <inlineHelpText>Your organization&#39;s Simple SMS account number.</inlineHelpText>
    <label>zAccount Number (deprecated)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>