unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__AccountSID__c.field-meta.xml
<CustomField>
    <fullName>simplesms__AccountSID__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Account SID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>