unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__ApiKey__c.field-meta.xml
<CustomField>
    <fullName>simplesms__ApiKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Your organization&#39;s Simple SMS API Key.</description>
    <inlineHelpText>Your organization&#39;s Simple SMS API Key.</inlineHelpText>
    <label>zAPI Key (deprecated)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>