unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__APIVersion__c.field-meta.xml
<CustomField>
    <fullName>simplesms__APIVersion__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>API Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>