unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Attach_Outbound_Media__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Attach_Outbound_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Save images sent on Outgoing messages as attachments.</description>
    <inlineHelpText>Save images sent on Outgoing messages as attachments.</inlineHelpText>
    <label>Attach Outbound Media</label>
    <type>Checkbox</type>
</CustomField>