unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Consent_Popup_Frequency__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Consent_Popup_Frequency__c</fullName>
    <defaultValue>&quot;Once per Recipient&quot;</defaultValue>
    <description>When a Sender sending outbound messages and this is the first message to receiver phone number, Admin can control whether the popup will show once per recipient or once per sender.</description>
    <inlineHelpText>When a Sender sending outbound messages and this is the first message to receiver phone number, Admin can control whether the popup will show once per recipient or once per sender.</inlineHelpText>
    <label>Consent Popup Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>