unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Conversation_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Conversation_Timeframe__c</fullName>
    <description>Conversation association timeframe for connecting past outbound going messages at the time on creating a new Open conversation.</description>
    <inlineHelpText>The timeframe in which we&#39;ll go back and pull in any outbound messages, that is not attached to any conversation, and attach to the newly created conversation.</inlineHelpText>
    <label>Conversation Timeframe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>