unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__CurrentJobIds__c.field-meta.xml
<CustomField>
    <fullName>simplesms__CurrentJobIds__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Current Job Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>