unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Default_Object__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Default_Object__c</fullName>
    <description>The default object to attach an incoming SMS Message to when the last outgoing message cannot be found.</description>
    <inlineHelpText>The default object to attach an incoming SMS Message to when the last outgoing message cannot be found.</inlineHelpText>
    <label>Default Search Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>