unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Enable_Auto_Phone_Number_Lookup__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Enable_Auto_Phone_Number_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Auto Phone Number Lookup</label>
    <type>Checkbox</type>
</CustomField>