unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Enabled__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>