unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__FromNumber__c.field-meta.xml
<CustomField>
    <fullName>simplesms__FromNumber__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>From Number</label>
    <type>Phone</type>
</CustomField>