unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Named_Credential__c</fullName>
    <description>The name of the Named Credential to use when accessing the Blackthorn Messaging API.</description>
    <inlineHelpText>The name of the Named Credential to use when accessing the Blackthorn Messaging API.</inlineHelpText>
    <label>zNamed Credential (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>