unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__NotificationEmail__c.field-meta.xml
<CustomField>
    <fullName>simplesms__NotificationEmail__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>