unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Opt_In_Objects__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Opt_In_Objects__c</fullName>
    <description>The default objects to check opt-In verification for Outbound messages. If Null/Blank system will check for all sObjects.</description>
    <inlineHelpText>The default objects to check opt-In verification for Outbound messages. If Null/Blank system will check for all sObjects.</inlineHelpText>
    <label>Opt-In Objects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>