unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Reply_Parent_Object_Preference__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Reply_Parent_Object_Preference__c</fullName>
    <description>When a reply message is sent this is the order in which the parent record is selected.</description>
    <inlineHelpText>When a reply message is sent this is the order in which the parent record is selected.</inlineHelpText>
    <label>Reply Parent Object Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>