unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__SandboxPin__c.field-meta.xml
<CustomField>
    <fullName>simplesms__SandboxPin__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Sandbox Pin</label>
    <length>18</length>
    <type>Text</type>
</CustomField>