unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Show_PNL_Unverified_Visual_Indicators__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Show_PNL_Unverified_Visual_Indicators__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Visual Indicators for Phone Numbers Not Looked Up</description>
    <label>Show PNL Unverified Visual Indicators</label>
    <type>Checkbox</type>
</CustomField>