unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Show_Unverified_Number_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Show_Unverified_Number_Confirmation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show Confirmation Popup for Landlines and Bad Numbers</description>
    <label>Show Unverified Number Confirmation</label>
    <type>Checkbox</type>
</CustomField>