unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__SMS_Signature__c.field-meta.xml
<CustomField>
    <fullName>simplesms__SMS_Signature__c</fullName>
    <description>Your SMS Signature will be appended to the initial messages for each of the number until we hear/reply back from the sms recipient. For the signature you should have &#39;Company Name&#39; and &#39;Opt Out&#39; instructions in the signature.</description>
    <inlineHelpText>Your SMS Signature will be appended to the initial messages for each of the number until we hear/reply back from the sms recipient. For the signature you should have &#39;Company Name&#39; and &#39;Opt Out&#39; instructions in the signature.</inlineHelpText>
    <label>SMS Signature</label>
    <type>TextArea</type>
</CustomField>