unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Track_Links__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Track_Links__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All links that start with http:// or https:// will be re-written by Simple SMS and made trackable.</description>
    <inlineHelpText>All links that start with http:// or https:// will be re-written by Simple SMS and made trackable.</inlineHelpText>
    <label>Track Links</label>
    <type>Checkbox</type>
</CustomField>