unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Trigger_Create_Lead__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Trigger_Create_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create a new Lead when an SMS Message is not matched.</description>
    <inlineHelpText>Create a new Lead when an SMS Message is not matched.</inlineHelpText>
    <label>Trigger: Create Lead</label>
    <type>Checkbox</type>
</CustomField>