unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Trigger_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Trigger_Lead_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a Lead is converted its messages are related to the new Contact.</description>
    <inlineHelpText>When a Lead is converted its messages are related to the new Contact.</inlineHelpText>
    <label>Trigger: Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>