unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Trigger_Match_Campaign__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Trigger_Match_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Match the incoming message to a Campaign based on a keyword.</description>
    <inlineHelpText>Match the incoming message to a Campaign based on a keyword.</inlineHelpText>
    <label>Trigger Match Campaign</label>
    <type>Checkbox</type>
</CustomField>