unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Trigger_Post_Incoming__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Trigger_Post_Incoming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Incoming messages will be posted to the message owner&#39;s Chatter feed.</description>
    <inlineHelpText>Incoming messages will be posted to the message owner&#39;s Chatter feed.</inlineHelpText>
    <label>Trigger: Post Incoming</label>
    <type>Checkbox</type>
</CustomField>