unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__Trigger_Task_Execution__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Trigger_Task_Execution__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Trigger Task Execution</label>
    <type>Checkbox</type>
</CustomField>