unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__URI__c.field-meta.xml
<CustomField>
    <fullName>simplesms__URI__c</fullName>
    <description>URI for the Simple SMS API.</description>
    <inlineHelpText>URI for the Simple SMS API.</inlineHelpText>
    <label>URI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>