unpackaged/main/default/objects/simplesms__SimpleSMSConfig2__c/fields/simplesms__UseSandbox__c.field-meta.xml
<CustomField>
    <fullName>simplesms__UseSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>UseSandbox</label>
    <type>Checkbox</type>
</CustomField>